<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JogodaMemoria</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="progresso">Progresso:</string>
    <string name="botao1">1</string>
    <string name="botao2">2</string>
    <string name="botao3">3</string>
    <string name="botao4">4</string>
    <string name="botao5">5</string>
    <string name="botao6">6</string>
    <string name="parabens">Parabéns!</string>
    <string name="msgem">Você tem uma boa memória!</string>    
    
</resources>
